2011-06-22  Beth Dakin  <bdakin@apple.com>

        Reviewed by Simon Fraser.

        https://bugs.webkit.org/show_bug.cgi?id=63174
        Don't draw the borders as one path unless there really are 4 borders
        -and corresponding-
        <rdar://problem/9457997>

        * fast/borders/only-one-border-with-width.html: Added.
        * platform/mac/fast/borders/only-one-border-with-width-expected.png: Added.
        * platform/mac/fast/borders/only-one-border-with-width-expected.txt: Added.

2011-06-22  Matthew Delaney  <mdelaney@apple.com>

        Reviewed by Oliver Hunt.

        Canvas in layer obscures overlapping span
        https://bugs.webkit.org/show_bug.cgi?id=63161

        * compositing/layer-creation/spanOverlapsCanvas.html: Added.
        * platform/mac/compositing/layer-creation: Added.
        * platform/mac/compositing/layer-creation/spanOverlapsCanvas-expected.txt: Added.
        * platform/mac/compositing/layer-creation/spanOverlapsCanvas-expected.png: Added.

2011-06-22  Jessie Berlin  <jberlin@apple.com>

        REGRESSION (r89426-r89428): inspector/console/console-trace-in-eval.html failing on
        SnowLeopard Intel Release (Tests) and Windows 7 Release (Tests).
        https://bugs.webkit.org/show_bug.cgi?id=63175

        Add platform-specific results to in order to get the bots green.

        * platform/mac/inspector/console: Added.
        * platform/mac/inspector/console/console-trace-in-eval-expected.txt: Added.

2011-06-22  Jessie Berlin  <jberlin@apple.com>

        WebKitTestRunner needs layoutTestController.dumpFrameLoadCallbacks.
        https://bugs.webkit.org/show_bug.cgi?id=42331

        Add another test that uses dumpFrameLoadCallbacks to the WK2 Skipped list.

        * platform/mac-wk2/Skipped:

2011-06-22  Kentaro Hara  <haraken@google.com>

        Reviewed by Tony Chang.

        Check |keypath| argument of createObjectStore(). Remove storage/indexeddb/keypath-as-array.html.