@@ -1,3 +1,9 @@
+2011-06-22  Tony Chang  <tony@chromium.org>
+
+        Add test that got renamed.  Should have been included with r89466.
+
+        * storage/indexeddb/keypath-basics.html: Renamed from LayoutTests/storage/indexeddb/keypath-as-array.html.
+
 2011-06-22  Beth Dakin  <bdakin@apple.com>
 
         Reviewed by Simon Fraser.
